[gd_scene load_steps=10 format=3 uid="uid://c77muoybmwomk"]

[ext_resource type="FontFile" uid="uid://c0fa1d1x1nrx6" path="res://GrapeSoda.ttf" id="1_06t4h"]
[ext_resource type="Script" uid="uid://d340h5o5ydg05" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="Texture2D" uid="uid://d2ttdickbkw0p" path="res://background.png" id="2_fu7sn"]
[ext_resource type="AudioStream" uid="uid://bh1ahh4r725sr" path="res://Sound Effect/intro.mp3" id="4_jix8l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_06t4h"]
texture = ExtResource("2_fu7sn")
modulate_color = Color(0.35906908, 0.35906908, 0.35906908, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.10980392, 0.10980392, 0.16078432, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.6029036, 0.60523194, 0.7276193, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.84467536, 0.8467731, 0.90357625, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_06t4h")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.125
offset_top = -132.125
offset_right = 193.125
offset_bottom = 132.125
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.99607843, 0.87058824, 0.10980392, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Start Game"

[node name="Exit" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.99607843, 0.87058824, 0.10980392, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -273.0
offset_right = 196.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 80
text = "Graft Busters"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -211.0
offset_top = -57.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 30
text = "version 1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx_intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jix8l")

[connection signal="pressed" from="MainButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Exit" to="." method="_on_exit_pressed"]
